--- a/style.css
+++ b/style.css
@@ -187,24 +187,21 @@ img{
 }
 
 .downArrow a.move{
-	animation: bounce 1.3s linear;
+	animation: bounce 1.1s linear;
 }
 
 
 
 
 @keyframes bounce{
-	20%,50%,80%, to{
+	20%,80%, to{
 		transform: translateY(0);
 	}
-	40%{
+	30%{
 		transform: translateY(-12px);
 	}
-	70%{
-		transform: translateY(-8px);
-	}
 	90%{
-		transform: translateY(-2px);
+		transform: translateY(-4px);
 	}
 }
 
