--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
+
 :root{
 	--btn-blue: rgba(0,99,229);
 	--bg-color: #040714;
@@ -9,6 +10,7 @@
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
+	scroll-behavior: smooth;
 }
 
 body{
@@ -53,6 +55,7 @@ img{
 	width: 100%;
 	top: 0;
 	z-index: 5;
+	padding:30px;
 }
 
 .navbarItems.active{
@@ -109,7 +112,7 @@ img{
 	background-color: rgba(0, 0, 0, 0.8);
 	border: none;
 	padding: 15px 20px;
-	border: 1px solid #fff;
+	border: 0.5px solid #f4f4f4;
 	color: #fff;
 	cursor: pointer;
 	border-radius: 5px;
@@ -190,6 +193,58 @@ img{
 	animation: bounce 1.1s linear;
 }
 
+/* MOVIES BUNDLE */
+
+#movies{
+	padding: 30px 50px;
+	margin: 30px 0;
+}
+
+#movies h1{
+	text-align: center;
+	font-size: 2.2rem;
+	margin: 15px 0;
+}
+
+#movies p{
+	text-align: center;
+	margin: 30px 0;
+	color: darkgray;
+	font-size: 1.1rem;
+}
+
+/* UNDER SHOWCASE */
+
+#underShowcase{
+	margin: 40px 0 0;
+	padding: 80px 40px 40px; 
+}
+
+.underShowcaseContainer{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.underShowcaseItems{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100%;
+}
+
+.underShowcaseList h1{
+	font-size: 2.1rem;
+	margin: 15px 0;
+	color: lightgray;
+}
+
+.underShowcaseItems ul li{
+	margin: 20px 35px;
+	color: darkgray;
+	font-size: 1.1rem;
+}
+
 
 
 
@@ -198,7 +253,7 @@ img{
 		transform: translateY(0);
 	}
 	30%{
-		transform: translateY(-12px);
+		transform: translateY(-8px);
 	}
 	90%{
 		transform: translateY(-4px);
@@ -206,14 +261,48 @@ img{
 }
 
 
-.container{
-	padding: 0 50px;
+/* UTILITIES */
+.grid{
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-gap: 30px;
 }
 
+.grid-3{
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-gap: 30px;
+}
+
+/* MEDIA QUERY */
 
 @media(max-width: 668px){
 	.navbarItems{
 		padding: 0 20px;
+	}
+
+	.navbarItems .navButtons .logIn{
+		font-size: 0.9rem;
+	}
+
+	.movieContainer{
+		grid-template-columns: repeat(8, 1fr);
+	}
+
+	.movieContainer img{
+		grid-column: span 4;
+	}
+
+	.movieContainer img:nth-last-child(1):nth-child(odd){
+		grid-column: 3 / span 4;
+	}
+
+	.underShowcaseContainer{
+		grid-template-columns: repeat(1, 1fr);
+	}
+
+	.underShowcaseList h1{
+		text-align: center;
 	}
 
 }
