--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 :root{
 	--btn-blue: rgba(0,99,229);
 	--bg-color: #040714;
+	--faq-color:#13151d ;
 }
 
 *{
@@ -193,26 +194,6 @@ img{
 	animation: bounce 1.1s linear;
 }
 
-/* MOVIES BUNDLE */
-
-#movies{
-	padding: 30px 50px;
-	margin: 30px 0;
-}
-
-#movies h1{
-	text-align: center;
-	font-size: 2.2rem;
-	margin: 15px 0;
-}
-
-#movies p{
-	text-align: center;
-	margin: 30px 0;
-	color: darkgray;
-	font-size: 1.1rem;
-}
-
 /* UNDER SHOWCASE */
 
 #underShowcase{
@@ -244,6 +225,27 @@ img{
 	color: darkgray;
 	font-size: 1.1rem;
 }
+
+/* MOVIES BUNDLE */
+
+#movies{
+	padding: 30px 50px;
+	margin: 30px 0;
+}
+
+#movies h1{
+	text-align: center;
+	font-size: 2.2rem;
+	margin: 15px 0;
+}
+
+#movies p{
+	text-align: center;
+	margin: 30px 0;
+	color: darkgray;
+	font-size: 1.1rem;
+}
+
 
 /* DISNEY BUNDLE */
 
@@ -289,6 +291,192 @@ img{
 	background-color: #126ee6;
 }
 
+/* DEVICES */
+
+.devices{
+	padding: 10px 40px;
+	text-align: center;
+}
+
+.devicesItems{
+	margin: 50px 0;
+}
+
+.devicesItems .device h2{
+	color: #f4f4f4;
+	margin: 10px 0;
+}
+
+.devicesItems .device p{
+	color: darkgray;
+	line-height: 1.5;
+	margin: 10px 0;
+}
+
+/* FAQ */
+
+.faq{
+	padding: 50px;
+}
+
+.faq h1{
+	color: #f4f4f4;
+	text-align: center;
+	font-size: 2.2rem;
+	margin: 30px 0;
+}
+
+.faqItem{
+	margin: 10px 0;
+}
+
+
+.faqItem .faqItemHeader h3::after{
+	content: '';
+	position: absolute;
+	right: 30px;
+	top: 40px;
+	transform: translateY(-50%);
+	font-size: 2rem;
+	display:inline-block;
+	width:40px;
+	height:40px;
+	background:
+    linear-gradient(darkgray 0 0),
+    linear-gradient(darkgray 0 0);
+  background-position:center;
+  background-size: 50% 2px,2px 50%; /*thickness = 2px, length = 50% (25px)*/
+  background-repeat:no-repeat;
+}
+
+.faqItem .faqItemHeader{
+	cursor: pointer;
+}
+
+.faqItem h3{
+	color: #f4f4f4;
+	height: 80px;
+	width: 100%;
+	padding: 20px;
+	background-color: var(--faq-color);
+	position: relative;
+	display: flex;
+	align-items: center;
+}
+
+
+.faqItem .content{
+	line-height: 1.5;
+	color: darkgray;
+	max-height: 0;
+	overflow: hidden;
+	position: relative;
+	transition: max-height 0.3s ease-in-out;
+	background-color: var(--faq-color);
+}
+
+.faqItem .content p{
+	margin: 10px 20px;
+}
+
+.faqItem .content:hover{
+	cursor: text;
+	pointer-events: none;
+}
+
+
+.faqItem p{
+	margin: 15px 0;
+	font-size: 1.1rem;
+}
+
+.faqItem p a{
+	color: #f4f4f4;
+}
+
+.faqItem .content ul{
+	padding: 0 40px;
+}
+
+.faqItem .content ul li{
+	margin: 5px 0;
+	font-size: 1.1rem;
+}
+
+/* faq active class items */
+
+.faqItem.active .faqItemHeader h3::after{
+	content: '';
+	background-color: darkgray;
+	width: 15px;
+	height: 2px;
+	position: absolute;
+	right: 35px;
+	top: 40px;
+	font-size: 2.2rem;
+	color:darkgray;
+}
+
+.faqItem.active .content{
+	
+}
+
+.faqItem.active .content:hover{
+	pointer-events: none;
+	cursor: text;
+}
+
+.faqItem.active .item1{
+	max-height: 500px;
+}
+
+.faqItem.active .item2{
+	max-height: 500px;
+}
+
+.faqItem.active .item3{
+	max-height: 500px;
+}
+
+.faqItem.active .item4{
+	max-height: 500px;
+}
+
+.faqItem.active .item5{
+	max-height: 500px;
+}
+
+.faqItem.active .item6{
+	max-height: 500px;
+}
+
+
+
+/* FOOTER  */
+
+
+
+
+
+/* GRIDS */
+.grid{
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-gap: 30px;
+}
+
+.grid-3{
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-gap: 30px;
+}
+
+.grid-4{
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	grid-gap: 30px;
+}
+
 
 
 /* KEYFRAMES */
@@ -305,18 +493,6 @@ img{
 }
 
 
-/* UTILITIES */
-.grid{
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	grid-gap: 30px;
-}
-
-.grid-3{
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	grid-gap: 30px;
-}
 
 /* MEDIA QUERY */
 
@@ -366,4 +542,10 @@ img{
 		margin-top: 15px;
 	}
 
+	.devicesItems{
+		grid-template-columns: repeat(2, 1fr);
+	}
+
 }
+
+
