--- a/style.css
+++ b/style.css
@@ -334,7 +334,7 @@ img{
 .faqItem .faqItemHeader h3::after{
 	content: '';
 	position: absolute;
-	right: 30px;
+	right: 5px;
 	top: 40px;
 	transform: translateY(-50%);
 	font-size: 2rem;
@@ -579,6 +579,10 @@ img{
 
 	.devicesItems{
 		grid-template-columns: repeat(2, 1fr);
+	}
+
+	.navbarItems .navButtons .signUp{
+		display: none;
 	}
 
 }
